--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webmk6",
-  "homepage":"https://www.cdhcreate.com/",
+  "homepage":"https://www.cdhcreate.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
