--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
   deployment:
     tasks:
       - export DEPLOYPATH=/home/cdhcreat/public_html/
-      -/bin/cp -R webmk6 $DEPLOYPATH
+      -/bin/cp -R * $DEPLOYPATH
