--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
-  deployment:
-    tasks:
-      - export DEPLOYPATH=/home/cdhcreat/public_html/
-      -/bin/cp -R * $DEPLOYPATH
+deployment:
+      tasks:
+        - export DEPLOYPATH=/home/cdhcreat/public_html
+        - /bin/cp -r * $DEPLOYPATH 
