--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,6 @@
 ---
 deployment:
       tasks:
-        - export DEPLOYPATH=/home/cdhcreat/public_html
-        - /bin/cp -R * $DEPLOYPATH 
+        - export DEPLOYPATH=/home/cdhcreat/public_html/
+        - /bin/cp index.html $DEPLOYPATH
+        - /bin/cp style.css $DEPLOYPATH
