--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "webmk6",
-  "homepage":"https://www.cdhcreate.com",
+  "homepage": "https://www.cdhcreate.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "nodemailer": "^6.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
