--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
     "nodemailer": "^6.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
