--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "follow-redirects": ">=1.14.8"
   },
   "scripts": {
     "start": "react-scripts start",
