--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.26.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "follow-redirects": ">=1.14.8",
     "nodemailer": "^6.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
-    "follow-redirects": ">=1.14.8"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
